# nss-hostslocal

./: .gitignore  LICENSE  Makefile.am  README  autogen.sh  configure.ac
src/: Makefile.am  map-file  nss.c
